# mini-spec-ir

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml
bench/: bench_kv.py  bench_spec.py  report.py
reports/: bench_20260519_024522.md
src/minispecir/: __init__.py  cache.py  config.py  device.py  engine.py  speculate.py  tokenizer.py  weights.py
src/minispecir/cli/: __init__.py  main.py
src/minispecir/model/: __init__.py  gpt2.py  llama.py
tests/: test_cache.py  test_engine.py  test_parity.py  test_parity_llama.py  test_scaffold.py  test_speculative.py  test_tokenizer.py  test_weights.py
