[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-spec-ir"
version = "0.1.0"
description = "Minimal speculative inference runtime for local GPT-2 (WIP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.15.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
minispecir = "minispecir.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
